# ClanManager

./: .gitignore  Dockerfile  LICENSE  README.md  bot.py  config.sql  docker-compose.yml  pyproject.toml  read_logs.py  requirements.txt
.github/workflows/: codeql-analysis.yml  pylint.yml  runner.yml
ext/: admin.py  applications.py  commands.py  core.py
utils/: __init__.py  bot.py  constants.py  converters.py  events.py  forms.py  image_processor.py  utils.py  views.py
